# AimRT_Benchmark

./: CMakeLists.txt  Dockerfile  Readme.md  build.sh  set_up.sh
cmake/: GetAimRT.cmake
demo/: CMakeLists.txt
demo/channel/: CMakeLists.txt  channel.yaml  main.cpp  module.cpp  module.h  start_node.sh
proto/: CMakeLists.txt  test_data.proto
